Add MKVI BMS Voltage Task (#258)
* Fix malformed yml

* Pull voltage task code from amit/bms-code-dev

Currently building, untested

* Removed the commented out code for charging

* Changing rc variable into pec_errors

* Fixed an error in voltage_task

* Update fault handling to allow multiple faults

* Set bms relay if not in fault state

* Add bms fault enum for backwards compat with canviewer

* Update canviewer to decode bms fault codes

* Fix grammar

* Remove redundant message in bms_core CAN slice

* Update variable based on bms.yml

* Remove state transistions now handled by check_fault_state

* Check for undervoltage in cells

* Update bms.yml for csc, da mia, i2c error checking

* Implement CSC MIA per CSC

* Add documentation for faults

* Fix multiple errors functionality

* Fixed bms.yml and added fault clearing

* Add debug for ov uv faults

* Resolve erroneous uv fault

* Handle multiple segments with unused voltage channels

* Clear pec fault if no pec errors

* Add per CSC MIA decoding to canviewer

* Rename csc mia for clarity

* Update csc_mia name in fault.c

---------

Co-authored-by: Rishit <rishitbansals@gmail.com>
Co-authored-by: Rishit Bansal <63207752+Rixhee@users.noreply.github.com>

--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -27,6 +27,8 @@ D1_DC_Bus_Voltage:
 Torque_Command:
 bms_fault_code:
   processing_function: decode_bms_fault_msg
+csc_mia:
+  processing_function: decode_csc_status
 ---
 # Vehicle States (state and fault)
 air_control_critical:
