--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -37,7 +37,7 @@ publish:
           # - (CF)  CHARGER_FAULT
           # - (SM)  STATE_MACHINE
           # - (CSC) CSC_MIA
-          # - (DA)  DA_MIA     
+          # - (DA)  DA_MIA
       - name: pack_voltage
         slice: 18 + 16
         unit:
@@ -132,15 +132,52 @@ publish:
     id: 0x510
     freq_hz: 100
     signals:
+      - name: csc_mia
+        slice: 0 + 6
+        unit:
+          type: uint8_t
+          name: ""
+          scale: 1
+          offset: 0
+      - name: da_status_1
+        slice: 6 + 16
+        unit:
+          type: uint16_t
+          name: ""
+          scale: 1
+          offset: 0
+      - name: da_status_2
+        slice: 22 + 8
+        unit:
+          type: uint8_t
+          name: ""
+          scale: 1
+          offset: 0
+      - name: i2c_error_count
+        slice: 30 + 8
+        unit:
+          type: uint8_t
+          name: "errors"
+          scale: 1
+          offset: 0
+      - name: i2c_channel
+        slice: 38 + 2
+        unit:
+          type: enum
+          values:
+            - CHANNEL_0
+            - CHANNEL_1
+            - CHANNEL_2
+            - CHANNEL_3
       - name: voltage_pec_error_count
-        slice: 0 + 8
+        slice: 40 + 8
         unit:
           type: uint8_t
           name: "errors"
           scale: 1
           offset: 0
       - name: temperature_pec_error_count
-        slice: 8 + 8
+        slice: 48 + 8
         unit:
           type: uint8_t
           name: "errors"
@@ -236,7 +273,7 @@ publish:
             - REG_C
             - REG_D
             - REG_E
-            - REF_F
+            - REG_F
       - name: voltage_1
         slice: 16 + 16
         unit:
