Completed the current task

--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -19,6 +19,7 @@ ready_to_drive:
 air_p_status:
 air_n_status:
 pack_voltage:
+pack_current:
 max_temperature:
   processing_function: convertVtoT
 min_temperature:
