--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -10,6 +10,7 @@ publish:
     signals:
       - name: bms_state
         slice: 0 + 2
+        slice: 0 + 2
         unit:
           type: enum
           values:
@@ -48,10 +49,10 @@ publish:
       - name: pack_current
         slice: 34 + 12
         unit:
-          type: int16_t
+          type: uint16_t
           name: A
           offset: 0
-          scale: 0.004
+          scale: 1
       - name: cell_balancing_status
         slice: 46 + 1
         unit:
