update #1 of many I think... for some reason the baord won't respond to the carger ID :( sending can tho!!

--- a/vehicle/mkvi/software/charging/BUILD
+++ b/vehicle/mkvi/software/charging/BUILD
@@ -29,6 +29,7 @@ cc_firmware(
         "//libs/can",
         "//libs/gpio",
         "//libs/timer",
-        "//third_party/Click_MCP25625:MCP25625",
+        "//libs/spi",
+        # "//third_party/Click_MCP25625:MCP25625",
     ],
 )
