--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -3,7 +3,31 @@ subscribe:
   - name: charging_fbk
     mob: 1
 publish:
-  - name: charging_cmd
+  - name: charging_cmd_to_elcon
+    id: 0x80
+    freq_hz: 1
+    signals:
+      - name: target_voltage
+        slice: 0 + 16
+        unit:
+          type: uint16_t
+          name: Volts
+          offset: 0
+          scale: 1
+      - name: target_current
+        slice: 16 + 16
+        unit:
+          type: uint16_t
+          name: Amps
+          offset: 0
+          scale: 1
+      - name: enable_charging
+        slice: 32 + 1
+        unit:
+          type: bool
+          values:
+            t: Charging Enabled
+            f: Charging Disabled
   - name: bms_core
     id: 0x10
     freq_hz: 100
