--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -9,5 +9,6 @@ dbc_gen(
         "//vehicle/common/motor_controller:motor_controller.dbc",
         "//vehicle/mkvi/software/bms:bms.yml",
         "//vehicle/mkvi/software/brakes:bspd.yml",
+        "//vehicle/mkvi/software/air_control:air.yml",
     ],
 )
