--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -30,6 +30,8 @@ bms_fault_code:
   processing_function: decode_bms_fault_msg
 csc_mia:
   processing_function: decode_csc_status
+internal_die_temp: convert_internal_die_temp
+
 ---
 # Vehicle States (state and fault)
 air_control_critical:
