--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -1,7 +1,7 @@
 name: bms
-subscribe:
-  - name: charging_ping
-    mob: 1
+# subscribe:
+#   - name: charging_ping
+#     mob: 1
 publish:
   - name: charging_cmd
     id: 0x80
@@ -73,7 +73,8 @@ publish:
           # - (CF)  CHARGER_FAULT
           # - (SM)  STATE_MACHINE
           # - (CSC) CSC_MIA
-          # - (MUX)  MUX_MIA
+          # - (MUX) MUX_MIA
+          # - (DOT) DIE_OVERTEMPERATURE
       - name: pack_voltage
         slice: 18 + 16
         unit:
@@ -224,7 +225,7 @@ publish:
     id: 0x511
     freq_hz: 100
     signals:
-      - name: dbg_1
+      - name: internal_die_temp
         slice: 0 + 16
         unit:
           type: uint16_t
