Fix min cell decoding

--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -31,6 +31,10 @@ bms_fault_code:
 csc_mia:
   processing_function: decode_csc_status
 internal_die_temp: convert_internal_die_temp
+dbg_3:
+dbg_4:
+segment_with_min_cell:
+minimum_cell:
 
 ---
 # Vehicle States (state and fault)
