--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -31,6 +31,7 @@ bms_fault_code:
 csc_mia:
   processing_function: decode_csc_status
 internal_die_temp: convert_internal_die_temp
+cell_balancing_status:
 
 ---
 # Vehicle States (state and fault)
