--- a/vehicle/mkvi/software/bms/bms.yml
+++ b/vehicle/mkvi/software/bms/bms.yml
@@ -3,8 +3,8 @@ name: bms
 subscribe:
   - name: charging_fbk
     mob: 1
-  - name: bms_ctrl
-    mob: 2
+  # - name: bms_ctrl
+  #   mob: 2
 publish:
   - name: charging_cmd
     id: 0x80
