Update torque multiplier, throttle calibration

--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -12,8 +12,11 @@ ss_imd:
 ss_tsms:
 ---
 # Vehicle Values
-throttle_l_pos:
-throttle_r_pos:
+throttle_l_raw:
+throttle_r_raw:
+throttle_r_out_of_range:
+throttle_deviation:
+throttle_brake_implaus:
 brake_gate:
 ready_to_drive:
 air_p_status:
