--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -12,13 +12,15 @@ ss_imd:
 ss_tsms:
 ---
 # Vehicle Values
-throttle_l_raw:
-throttle_r_raw:
+throttle_l_pos:
+throttle_r_pos:
 throttle_r_out_of_range:
 throttle_deviation:
 throttle_brake_implaus:
 brake_gate:
+brake_pressure:
 ready_to_drive:
+start_button_state:
 air_p_status:
 air_n_status:
 pack_voltage:
@@ -44,4 +46,4 @@ bms_core:
   bms_state:
   bms_fault_state:
 throttle:
-  throttle_state:
+  throttle_status:
