--- a/vehicle/mkvi/software/imu/BUILD
+++ b/vehicle/mkvi/software/imu/BUILD
@@ -23,6 +23,7 @@ cc_firmware(
         "//libs/gpio",
         "//libs/timer",
         "//projects/btldr:btldr_lib",
+        # "//projects/can_print",
     ],
 )
 
