--- a/vehicle/mkvi/software/imu/imu.yml
+++ b/vehicle/mkvi/software/imu/imu.yml
@@ -11,3 +11,14 @@ publish:
           name: ""
           scale: 1
           offset: 0
+  - name: can_print_debug
+    id: 0x7ff
+    freq_hz: 100
+    signals:
+      - name: can_print
+        slice: 0 + 64
+        unit:
+          type: uint64_t
+          name: ""
+          scale: 1
+          offset: 0
