--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -25,6 +25,12 @@ min_temperature:
   processing_function: convertVtoT
 D1_DC_Bus_Voltage:
 Torque_Command:
+accel_x:
+accel_y:
+accel_z:
+gyro_x:
+gyro_y:
+gyro_z:
 ---
 # Vehicle States (state and fault)
 air_control_critical:
