Remove CI for uploading to digital ocean

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -35,6 +35,7 @@ jobs:
             exit 0
           fi
 
+      # Commented out due to no longer using Digital Ocean
       # - name: upload
       #   uses: BetaHuhn/do-spaces-action@v2
       #   with:
