Finish multi arg input

--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -4,6 +4,7 @@ load("//bazel/tools:defs.bzl", "dbc_gen")
 dbc_gen(
     name = "mkvi.dbc",
     srcs = [
+        "//projects/can_print:can_print.yml",
         "//vehicle/common/emeter:emeter.dbc",
         "//vehicle/common/motor_controller:motor_controller.dbc",
         "//vehicle/mkvi/software/air_control:air.yml",
