more recent updates

--- a/projects/canviewer/config.yml
+++ b/projects/canviewer/config.yml
@@ -25,6 +25,7 @@ air_p_status:
 air_n_status:
 imd_status:
 pack_voltage:
+D3_Motor_Temperature:
 #pack_current:
 max_temperature:
   processing_function: convertVtoT
