--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -13,6 +13,6 @@ dbc_gen(
         "//vehicle/mkvi/software/brakes:bspd.yml",
         "//vehicle/mkvi/software/air_control:air.yml",
         "//vehicle/mkvi/software/throttle:throttle.yml",
-        #"//vehicle/mkvi/software/dashboard:dashboard.yml",
+        "//vehicle/mkvi/software/dashboard:dashboard.yml",
     ],
 )
