--- a/vehicle/mkvi/software/dashboard/dashboard.yml
+++ b/vehicle/mkvi/software/dashboard/dashboard.yml
@@ -35,8 +35,8 @@ publish:
         unit:
           type: bool
           values:
-            t: CLOSED
-            f: OPEN
+            t: OPEN
+            f: CLOSED
       
       - name: ss_estop
         slice: 4 + 1
