remove legacy can print files, calls to can print

--- a/vehicle/mkvi/software/imu/icm20948/BUILD
+++ b/vehicle/mkvi/software/imu/icm20948/BUILD
@@ -12,6 +12,6 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//libs/spi",
-        "//projects/can_print",
+        # "//projects/can_print",
     ],
 )
