Add IMU Code (#279)
* Revert "Adding STM32 support and libraries to monorepo (#168)"

This reverts commit 96a02158a7e7da497150ae8c167028cc62df25f7.

* Add base imu spi config

* Add blinky

* Bump pytest version to latest

* Update can_print with optional multi arg

* Add support to SPI lib for redirecting spi to main/alt

* Add working dev id register read

* Add working accel read

* Clean up hw init, begin on imu init, create icm lib

* Add working icm read reg function

* Set accel fsr

Weird bug with can print printing multiple times

* Complete accel read

* Complete gyro read

* Working magnetometer dev id read

* Finalize accel and gryo code for drive day

* remove legacy can print files, calls to can print

* fix build

* remove comment step in kicad ci

* add spi_transmit function back

* temp remove bazel cache

* remove broken build

* revert imu pcb to main

* complete support for alt/main spi bus selection

* Move icm20948 lib to vehicle/common

* Add todo to icm mag write

* add todo for keeping track of the active register bank

* remove old variable

* add todo for optimizing arb id calc

* update timer hz comment

---------

Co-authored-by: Drew Pang <drew@teleo.ai>

--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -14,6 +14,7 @@ dbc_gen(
         "//vehicle/mkvi/software/brakes:bspd.yml",
         "//vehicle/mkvi/software/charging:charger.yml",
         "//vehicle/mkvi/software/dashboard:dashboard.yml",
+        "//vehicle/mkvi/software/imu:imu.yml",
         "//vehicle/mkvi/software/throttle:throttle.yml",
     ],
 )
